<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/login"
        android:enabled="true"
        android:icon="@drawable/ic_login"
        android:title="@string/login"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/Bookmarks"
        android:enabled="true"
        android:icon="@android:drawable/ic_input_get"
        android:title="@string/bookmarks"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/guideline"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/guidelines"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout"
        app:showAsAction="ifRoom" />
</menu>